# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html), with the exception that v0.X updates include backwards-incompatible API changes.
From v1.0.0 and on, the project will adherence strictly to Semantic Versioning.


## [Unreleased]

## [0.3.0] - 2022-10-03
### Added
- `init_range` parameter to both SPLoRA and SPLoPA
- `shared_pos_weights_option` to SPLoPA


## [0.2.0] - 2022-09-28
### Added
- Structured Prunint Low-rank Adapter (SPLoRA)
- SPLoPA prototype rank control
- Demo notebook

### Changed
- Switch to batch-wise Kronecker product implementation


## [0.1.0] - 2022-08-3
### Added
- Structure Pruning Low-rank PHM Adapter (SPLoPA) and unit test