@@ -7,7 +7,7 @@ from sp_adapters.splora import _DEFAULT_INIT_RANGE, SPLoRALinear
 EPS = 1e-9
 
 
-def test_splora():
+def test_splora_linear():
     rank = 2
     in_features = 9
     out_features = 4
@@ -38,14 +38,6 @@ def test_splora():
     lin_out = lin.forward(x)
     splin_out = splin.forward(x)
     assert torch.allclose(lin_out, splin_out, atol=1e-3)
-
-    # splin2 = SPLoRA(
-    #     lin,
-    #     rank=rank,
-    #     init_range=1e-6,
-    # )
-    # splin2_out = splin2.forward(x)
-    # assert torch.allclose(lin_out, splin2_out, atol=1e-6 + EPS)
 
     # Train a bit
     mse = nn.MSELoss()
@@ -82,6 +74,83 @@ def test_splora():
     lin2 = splin.to_module()
     assert torch.equal(lin2.weight, splin.adapted_weight)
     assert torch.equal(lin2.bias, splin.adapted_bias)
+
+
+def test_splora_conv():
+    batch_size = 2
+    rank = 2
+    in_channels = 9
+    out_channels = 4
+    kernel_size = 3
+    A = 9
+
+    for ConvNd in [nn.Conv1d, nn.Conv2d, nn.Conv3d]:
+        D = int(ConvNd.__name__[-2])
+        x_shape = [batch_size, in_channels] + [A for _ in range(D)]
+        y_shape = [batch_size, out_channels] + [A - 2 for _ in range(D)]
+        x = torch.randn(x_shape)
+        y = torch.randn(y_shape)
+        bias = D == 2
+
+        conv = ConvNd(in_channels, out_channels, kernel_size=kernel_size, bias=bias)
+        spconv = SPLoRA(conv, rank)
+        assert torch.equal(conv.weight, spconv.weight)
+        if bias:
+            assert torch.equal(conv.bias, spconv.bias)
+
+        # Prepare optim
+        optimizer = torch.optim.Adam(spconv.parameters())
+        optimizer.zero_grad()
+
+        # Save for later comparison
+        prev_adapter_cols = torch.clone(spconv.adapter.cols)
+        prev_adapter_rows = torch.clone(spconv.adapter.rows)
+        if bias:
+            prev_bias = torch.clone(spconv.adapter_bias)
+
+        # Forwards are approx equal since adapters were initialized with near-zero values
+        conv_out = conv.forward(x)
+        spconv_out = spconv.forward(x)
+        assert torch.allclose(conv_out, spconv_out, atol=1e-3)
+
+        # Train a bit
+        mse = nn.MSELoss()
+        loss = mse(spconv_out, y)
+        loss.backward()
+        optimizer.step()
+
+        # Linear params remain unchanged
+        assert torch.equal(conv.weight, spconv.weight)
+        if bias:
+            assert torch.equal(conv.bias, spconv.bias)
+
+        # Adapter params changed!
+        assert not torch.equal(spconv.adapter.cols, prev_adapter_cols)
+        assert not torch.equal(spconv.adapter.rows, prev_adapter_rows)
+        if bias:
+            assert not torch.equal(spconv.adapter_bias, prev_bias)
+
+        # Count params
+        tot_params = sum([torch.Tensor([p.shape]).prod() for p in spconv.parameters()])
+
+        # Count masked params
+        in_features_mask = torch.tensor([1, 0, 1, 1, 0, 1, 0, 0, 0], dtype=torch.bool)
+        out_features_mask = torch.tensor([1, 0, 1, 0], dtype=torch.bool)
+
+        spconv.configure_parameter_read(
+            in_features_mask=in_features_mask, out_features_mask=out_features_mask
+        )
+        tot_masked_params = sum(
+            [torch.Tensor([p.shape]).prod() for p in spconv.parameters()]
+        )
+
+        assert tot_masked_params == tot_params - 5 * rank - 2 * rank
+
+        # Export to conv
+        conv2 = spconv.to_module()
+        assert torch.equal(conv2.weight, spconv.adapted_weight)
+        if bias:
+            assert torch.equal(conv2.bias, spconv.adapted_bias)
 
 
 def test_splora_named_parameters():
